User Login and Registration complete

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.application.name=buzznote
 
+server.servlet.context-path=/api
+server.servlet.session.cookie.same-site=strict
+server.port=8081
+
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
@@ -7,3 +11,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+
+# spring.security.user.name=sahan
+# spring.security.user.password=1234
