--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,11 +8,15 @@ spring:
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
-
 
   security:
     oauth2:
@@ -36,12 +40,12 @@ spring:
           #     - email
           #   redirect-uri: ${LINKEDIN_REDIRECT_URI}
 
-        # provider:
-        #   google:
-        #     authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
-        #     token-uri: https://oauth2.googleapis.com/token
-        #     user-info-uri: https://openidconnect.googleapis.com/v1/userinfo
-        #     user-name-attribute: sub
+#          provider:
+#            google:
+#              authorization-uri: https://accounts.google.com/o/oauth2/v2/auth
+#              token-uri: https://oauth2.googleapis.com/token
+#              user-info-uri: https://openidconnect.googleapis.com/v1/userinfo
+#              user-name-attribute: sub
 
 server:
   port: 8081
